:bug: fix apearing scrollbar when transform towards right

--- a/src/components/Cart/Modal/Modal.module.scss
+++ b/src/components/Cart/Modal/Modal.module.scss
@@ -1,5 +1,5 @@
 .ModalContainer {
-  position: absolute;
+  position: fixed;
   right: 0;
   top: 0;
   width: 376px;
