--- a/src/components/Hamburger/Modal/Modal.module.scss
+++ b/src/components/Hamburger/Modal/Modal.module.scss
@@ -38,7 +38,6 @@
   padding: 16px 32px;
   display: flex;
   justify-content: space-between;
-  overflow-y: auto;
   flex-direction: column;
   flex-grow: 1;
   flex-shrink: 1;
