--- a/src/components/Search/Modal/Modal.module.scss
+++ b/src/components/Search/Modal/Modal.module.scss
@@ -103,7 +103,6 @@
   text-align: left;
   font-size: 15px;
   line-height: 16px;
-  overflow-x: hidden;
   border: none;
   outline: none;
   border-radius: 0px;
@@ -116,7 +115,6 @@
 
 .ProductCatalogue {
   text-align: left;
-  overflow: hidden scroll;
 }
 
 .ProductContainer {
