--- a/src/containers/Navlist/Navlist.module.scss
+++ b/src/containers/Navlist/Navlist.module.scss
@@ -38,7 +38,7 @@
 .NavlistItem {
  padding: 10px;
  font-weight: 500;
- font-size: clamp(12px, 1.3vw, 15px);
+ font-size: clamp(13px, 1.3vw, 15px);
 
  a {
    text-decoration: none;
